# github-action-rss

./: .gitignore  Cargo.toml  README.md  all.html  all.md  default.html  dev.html  dev.md  feed.opml  index.html  requirements.txt  this-year.html  this-year.md  其他.html  其他.md  逆风笑.html
.github/: dependabot.yml
.github/workflows/: bin.yml  deploy.yml  rust.yml  send.yml
scripts/: md2html.py  send.py  template.html
src/: main.rs
test/: feed.opml
