[package]
name = "github-action-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opml = "1.1"
reqwest = { version = "0.12", features = ["json"] }
diligent-date-parser = "0.1.4"
futures = "0.3.30"
rss = "2.0"
atom_syndication = "0.12.6"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
