[package]
name = "github-action-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opml = "1.1"
reqwest = { version = "0.13", features = ["json"] }
diligent-date-parser = "0.1.5"
futures = "0.3.32"
rss = "2.1"
atom_syndication = "0.12.9"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.45"
